Added some initial content subsections

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#2563eb" />
     <meta name="description"
-        content="NeurOwn - Own Your AI Infrastructure. Affordable AI servers and consulting services for businesses." />
-    <title>NeurOwn - Own Your AI Infrastructure</title>
+        content="neurOwn - Own Your AI Infrastructure. Affordable AI servers and consulting services for businesses." />
+    <title>neurOwn - Own Your AI Infrastructure</title>
 
     <!-- TODO preload fonts -->
 </head>
